// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating interchange interchange element has duplicate names should have validation failures 1`] = `"Interchange InterchangeName redeclares interchange element DomainEntityElementName."`;

exports[`when validating interchange interchange element has duplicate names should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when validating interchange interchange element has multiple duplicate names should have validation failures 1`] = `"Interchange InterchangeName redeclares interchange element DomainEntityElementName1."`;

exports[`when validating interchange interchange element has multiple duplicate names should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when validating interchange interchange element has multiple duplicate names should have validation failures 3`] = `"Interchange InterchangeName redeclares interchange element DomainEntityElementName2."`;

exports[`when validating interchange interchange element has multiple duplicate names should have validation failures 4`] = `
Object {
  "column": 4,
  "line": 7,
  "tokenText": "domain entity",
}
`;
